add controller for searching by name
